src/expr/src/scalar/snapshots/mz_expr__scalar__func__jsonb_get_path_stringify.snap
---
source: src/expr/src/scalar/func.rs
expression: "#[sqlfunc(sqlname = \"#>>\", is_infix_op = true)]\nfn jsonb_get_path_stringify<'a>(\n    a: JsonbRef<'a>,\n    b: Array<'a>,\n    temp_storage: &'a RowArena,\n) -> Option<&'a str> {\n    let json = jsonb_get_path(a, b)?;\n    jsonb_stringify(json.into_datum(), temp_storage)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct JsonbGetPathStringify;
impl crate::func::binary::EagerBinaryFunc for JsonbGetPathStringify {
    type Input1<'a> = JsonbRef<'a>;
    type Input2<'a> = Array<'a>;
    type Output<'a> = Option<&'a str>;
    fn call<'a>(
        &self,
        a: Self::Input1<'a>,
        b: Self::Input2<'a>,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output<'a> {
        jsonb_get_path_stringify(a, b, temp_storage)
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::SqlColumnType,
        input_type_b: mz_repr::SqlColumnType,
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        let is_null = nullable
            || (propagates_nulls && (input_type_a.nullable || input_type_b.nullable));
        output.nullable(is_null)
    }
    fn is_infix_op(&self) -> bool {
        true
    }
}
impl std::fmt::Display for JsonbGetPathStringify {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("#>>")
    }
}
fn jsonb_get_path_stringify<'a>(
    a: JsonbRef<'a>,
    b: Array<'a>,
    temp_storage: &'a RowArena,
) -> Option<&'a str> {
    let json = jsonb_get_path(a, b)?;
    jsonb_stringify(json.into_datum(), temp_storage)
}
