src/expr/src/scalar/snapshots/mz_expr__scalar__func__jsonb_get_string.snap
---
source: src/expr/src/scalar/func.rs
expression: "#[sqlfunc(sqlname = \"->\", is_infix_op = true)]\nfn jsonb_get_string<'a>(a: JsonbRef<'a>, k: &str) -> Option<JsonbRef<'a>> {\n    let dict = DatumMap::try_from_result(Ok::<_, ()>(a.into_datum())).ok()?;\n    let v = dict.iter().find(|(k2, _v)| k == *k2).map(|(_k, v)| v)?;\n    JsonbRef::try_from_result(Ok::<_, ()>(v)).ok()\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct JsonbGetString;
impl crate::func::binary::EagerBinaryFunc for JsonbGetString {
    type Input1<'a> = JsonbRef<'a>;
    type Input2<'a> = &'a str;
    type Output<'a> = Option<JsonbRef<'a>>;
    fn call<'a>(
        &self,
        a: Self::Input1<'a>,
        b: Self::Input2<'a>,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output<'a> {
        jsonb_get_string(a, b)
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::SqlColumnType,
        input_type_b: mz_repr::SqlColumnType,
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        output
            .nullable(
                nullable
                    || (propagates_nulls
                        && (input_type_a.nullable || input_type_b.nullable)),
            )
    }
    fn is_infix_op(&self) -> bool {
        true
    }
}
impl std::fmt::Display for JsonbGetString {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("->")
    }
}
fn jsonb_get_string<'a>(a: JsonbRef<'a>, k: &str) -> Option<JsonbRef<'a>> {
    let dict = DatumMap::try_from_result(Ok::<_, ()>(a.into_datum())).ok()?;
    let v = dict.iter().find(|(k2, _v)| k == *k2).map(|(_k, v)| v)?;
    JsonbRef::try_from_result(Ok::<_, ()>(v)).ok()
}
